# 2024.1-MeasureSoftGram-Parser

./: .gitignore  README.md  json_to_df.py  main.py  plugins.json  pyproject.toml  pytest.ini  requeriments.txt  requirements.txt  settings.py  sonar-project.properties  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: descri--o-de-tarefa.md  hist-ria-de-usu-rio.md  relat-rio-de-bug.md  solicita--o-de-melhorias.md
.github/workflows/: linter.yml  metrics.yml  python-publish.yml  test.yml  tests.yml
genericparser/: __init__.py  accept_plugins.py  genericparser.py
genericparser/plugins/dinamic/: github.py
genericparser/plugins/domain/: generic_class.py
plugins/statics/sonarqube/: __init__.py  main.py  sonarqube.py
plugins/statics/sonarqube/staticfiles/: __init__.py  sonarqube_supported_metrics.py
src/: main.py  plugins.json
src/plugins/statics/sonarqube/: main.py
src/plugins/statics/sonarqube/staticfiles/: sonarqube_available_metrics.py
tests/: test_extract_mettric_sonarqbe.py  tests_main_file.py
tests/mockfiles/: expected_return_values.py  extracted.json  mock_input_pandas_transform.py  mock_output_pandas_transform.py  response_api_github_all_pull_metrics.json  response_api_github_ci_feedback_times.json  response_api_github_community_profile.json  response_api_github_general.json  response_api_github_puch_card.json  response_api_github_pull_request.json  response_api_github_throughput.json  to_extract.json
tests/unit_tests/: test_extract_metric_github.py  test_github_parser_metrics.py
